Can send receiver and sender "ethereum address"(really mobile device id) to the final part of the transfer flow. Need to add account creation and sign in to associate with real public and private ethereum key. Also need to implement the actual transfer in ethereum.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hint_transfer_money_reason">Reason</string>
     <string name="title_activity_ready_transfer">ReadyTransfer</string>
     <string name="title_activity_reply_transfer">ReplyTransfer</string>
+    <string name="title_activity_finish_transfer">FinishTransfer</string>
+
 </resources>
