--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,10 @@
     <string name="text_button_sign_in">Sign In</string>
     <string name="text_button_register">Register</string>
     <string name="text_button_create_account">Create Account</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
+    <string name="text_et_email">Email</string>
+    <string name="text_et_password">Password</string>
+    <string name="title_activity_create_account">CreateAccount</string>
+    <string name="title_activity_landing_page">LandingPageActivity</string>
 
 
 </resources>
