Filled out account creation(with dummy data storing)
Need to implement data authentication and storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="text_et_password">Password</string>
     <string name="title_activity_create_account">CreateAccount</string>
     <string name="title_activity_landing_page">LandingPageActivity</string>
+    <string name="et_confirm_password">Confirm Password</string>
 
 
 </resources>
