--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BeamItUp</string>
     <string name="title_activity_transfer_money">Transfer Money</string>
     <string name="text_button_transfer_money">Transfer Money</string>
-    <string name="text_button_set_amount">Ready Transfer</string>
+    <string name="text_button_ready_transfer">Ready Transfer</string>
     <string name="text_button_past_transfers">Transfer History</string>
     <string name="text_button_add_eth">Add Ethereum Account</string>
     <string name="hint_transfer_money_amount">Amount</string>
@@ -24,6 +24,11 @@
     <string name="title_activity_add_eth">AddEthActivity</string>
     <string name="et_private_key">Private Key</string>
     <string name="et_eth_address">Ethereum Address</string>
+    <string name="title_activity_receive_transfer">ReceiveTransferActivity</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_create_reply_transfer">CreateReplyTransferActivity</string>
+    <string name="text_button_ready_reply">Ready Reply</string>
 
 
 </resources>
