Started neatening up Transfer flow, especially ReplyTransfer. Thinking about making Fragments to make it easier to create EthPicker listviews.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="text_button_add_eth">Add Ethereum Account</string>
     <string name="hint_transfer_money_amount">Amount</string>
     <string name="hint_transfer_money_reason">Reason</string>
-    <string name="title_activity_ready_transfer">ReadyTransfer</string>
-    <string name="title_activity_reply_transfer">ReplyTransfer</string>
-    <string name="title_activity_finish_transfer">FinishTransfer</string>
+    <string name="title_activity_ready_transfer">Ready Transfer</string>
+    <string name="title_activity_reply_transfer">Reply To Transfer</string>
+    <string name="title_activity_finish_transfer">Finish Transfer</string>
     <string name="tv_eth_address">Address</string>
 
     <!-- Signin -->
@@ -22,14 +22,14 @@
     <string name="et_confirm_password">Confirm Password</string>
     <string name="title_activity_create_account">CreateAccount</string>
 
-    <string name="title_activity_landing_page">LandingPageActivity</string>
-    <string name="title_activity_add_eth">AddEthActivity</string>
+    <string name="title_activity_landing_page">Home</string>
+    <string name="title_activity_add_eth">Add Ethereum Account</string>
     <string name="et_private_key">Private Key</string>
     <string name="et_eth_address">Ethereum Address</string>
-    <string name="title_activity_receive_transfer">ReceiveTransferActivity</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_receive_transfer">Receive Transfer</string>
+    <string name="title_activity_main">Login</string>
     <string name="title_activity_login">Login</string>
-    <string name="title_activity_create_reply_transfer">CreateReplyTransferActivity</string>
+    <string name="title_activity_create_reply_transfer">Create Transfer Reply</string>
     <string name="text_button_ready_reply">Ready Reply</string>
 
     <string name="tv_finish_transfer_status">Status</string>
@@ -39,6 +39,7 @@
     <string name="tv_finish_transfer_receiver_public_key">Receiver Public Key</string>
     <string name="transfer_succeeded">Transfer succeeded.</string>
     <string name="transfer_failed">Transfer failed.</string>
+    <string name="tv_transfer_money_receiver_address">Receiver Address</string>
 
 
 </resources>
