--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="tv_eth_address_default">Eth address</string>
     <string name="gas_used_label">Gas Used:</string>
     <string name="gas_used_value">gas used</string>
+    <string name="transaction_gas_cost_label">Transaction gas cost:</string>
+    <string name="transaction_gas_cost_value">transaction gas cost</string>
 
 </resources>
