Request done end-to-end. Need to hide Wallet behind KeyStore and make it async.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,7 @@
     <string name="et_eth_nickname">Nickname</string>
     <string name="et_eth_password">Password</string>
     <string name="tv_eth_nickname">Eth Nickname</string>
+    <string name="tv_password">Password:</string>
+    <string name="et_password">password</string>
 
 </resources>
