Working async gas task. Need to add authentication into request flow.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="btn_decline_request">Decline Request</string>
     <string name="et_eth_nickname">Nickname</string>
     <string name="tv_eth_nickname">Eth Nickname</string>
+    <string name="tv_gas_cost_label">Gas cost:</string>
+    <string name="tv_gas_cost_value">0</string>
 
 </resources>
