--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="action_settings">Settings</string>
     <string name="et_eth_address">Address</string>
     <string name="tv_eth_wallet_name">Wallet name</string>
+    <string name="btn_save_eth">Save Eth</string>
 
 </resources>
