Basic notification and update notification working, still not launchable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,7 @@
     <string name="tv_eth_wallet_name">Wallet name</string>
     <string name="btn_save_eth">Save Eth</string>
 
+    <!-- Notifications -->
+    <string name="channel_name">Beam It Up</string>
+
 </resources>
