--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Titles -->
     <string name="title_activity_create_account">CreateAccount</string>
     <string name="title_activity_landing_page">Beam It Up</string>
-    <string name="title_activity_add_eth">Add Ethereum Account</string>
+    <string name="title_activity_add_wallet">Add Wallet</string>
 
     <!-- Keys -->
     <string name="amount_label">Amount:</string>
@@ -17,14 +17,14 @@
     <string name="sender_address_value">sender address</string>
 
     <!-- Buttons -->
-    <string name="btn_add_eth">Add Ethereum Account</string>
-    <string name="btn_eth_list">Eth List</string>
+    <string name="btn_add_wallet">Add Wallet</string>
+    <string name="btn_wallet_list">Wallet List</string>
     <string name="btn_sign_in">Sign In</string>
     <string name="btn_create_account">Create Account</string>
     <string name="btn_accept_request">Accept Request</string>
     <string name="btn_decline_request">Decline Request</string>
     <string name="btn_create_request">Create Request</string>
-    <string name="btn_save_eth">Save Eth</string>
+    <string name="btn_save_wallet">Save Wallet</string>
 
     <!-- Hints -->
     <string name="hint_email">Email</string>
@@ -32,8 +32,8 @@
     <string name="hint_confirm_password">Confirm Password</string>
     <string name="desc_address_qr_code">Address QR Code</string>
 
-    <string name="tv_eth_id_default">Eth ID</string>
-    <string name="tv_eth_address_default">Eth address</string>
+    <string name="tv_wallet_id_default">Wallet ID</string>
+    <string name="tv_wallet_address_default">Wallet address</string>
     <string name="gas_used_label">Gas Used:</string>
     <string name="gas_used_value">gas used</string>
     <string name="title_activity_create_request">CreateRequestActivity</string>
@@ -42,15 +42,15 @@
     <string name="title_activity_finish_request">FinishRequestActivity</string>
     <string name="to_address_label">To address:</string>
     <string name="to_address_value">to</string>
-    <string name="et_eth_nickname">Nickname</string>
-    <string name="tv_eth_nickname">Eth Nickname</string>
+    <string name="et_wallet_nickname">Nickname</string>
+    <string name="tv_wallet_nickname">Wallet Nickname</string>
     <string name="tv_gas_cost_label">Gas cost:</string>
     <string name="tv_gas_cost_value">0</string>
-    <string name="title_activity_eth">Eths</string>
-    <string name="title_activity_eth_detail">Eth Details</string>
+    <string name="title_activity_wallet">Wallets</string>
+    <string name="title_activity_wallet_detail">Wallet Details</string>
     <string name="action_settings">Settings</string>
-    <string name="et_eth_address">Address</string>
-    <string name="tv_eth_wallet_name">Wallet name</string>
+    <string name="et_wallet_address">Address</string>
+    <string name="tv_wallet_wallet_name">Wallet name</string>
 
     <!-- Notifications -->
     <string name="channel_name">Beam It Up</string>
