--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
 
     <!-- Notifications -->
     <string name="channel_name">Beam It Up</string>
+    <string name="title_activity_transaction_detail">TransactionDetailActivity</string>
 </resources>
